# bbpr2md

./: AGENTS.md  Cargo.toml  Justfile  README.md
.github/workflows/: release.yml
examples/: .env.example  claude_skill.md  config.toml
examples/gemini_skill/: SKILL.md
src/: client.rs  formatter.rs  main.rs
