[package]
name = "bbpr2md"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
dotenvy = "0.15"
confy = "2.0"
