[package]
name = "bbpr2md"
version = "0.1.11"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0.103"
dotenvy = "0.15"
confy = "2.0"
dialoguer = "0.12.0"
directories = "6.0.0"
